<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userProfileMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".activities.UserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:title="@string/title_activity_user_profile"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/profileHeaderLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/userProfileImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="false"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/user_profile_image_description"
            android:src="@drawable/perfil_usuario" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/userProfileImageView"
            android:layout_marginStart="16dp"
            android:layout_alignTop="@id/userProfileImageView"
            android:text="@string/loading_username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/registrationDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/userProfileImageView"
            android:layout_below="@id/userNameTextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/loading_registration_date"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>
        <Button
            android:id="@+id/editProfileButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/userProfileImageView"
            android:layout_below="@id/registrationDateTextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#009688"
            android:textColor="@android:color/white"
            android:text="@string/button_edit_profile"
            android:textAllCaps="false"/>

        <ImageView
            android:id="@+id/logoImageViewProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_logo_description"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <Button
        android:id="@+id/addGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_add_game"
        android:backgroundTint="#009688"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/profileHeaderLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/viewUsersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_view_users"
        android:backgroundTint="#009688"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/addGameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gamesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/cd_user_games_list"
        app:layout_constraintTop_toBottomOf="@id/viewUsersButton" app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/activity_game_list" /> <Button
    android:id="@+id/logoutButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:text="@string/button_logout"
    style="?attr/materialButtonOutlinedStyle"
    android:backgroundTint="#009688"
    android:textColor="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/loadingProgressBarProfile"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>