<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editProfileMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".activities.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editProfileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:title="@string/title_activity_edit_profile"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/profileHeaderEditLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editProfileToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/userProfileImageViewEdit"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="false"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/user_profile_image_description"
            android:src="@drawable/perfil_usuario" /> <TextView
        android:id="@+id/userNameTextViewEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/userProfileImageViewEdit"
        android:layout_alignTop="@id/userProfileImageViewEdit"
        android:layout_marginStart="16dp"
        android:text="@string/loading_username"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

        <ImageView
            android:id="@+id/logoImageViewEditProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_logo_description"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/editFieldsScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/profileHeaderEditLayout"
        app:layout_constraintBottom_toTopOf="@+id/actionButtonsLayoutEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/nameEditTextProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_real"
                android:inputType="textPersonName"
                android:textColor="#1A1919"
                android:backgroundTint="#595B6A"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"/>

            <!--
            <EditText
                android:id="@+id/lastNameEditTextProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:textColor="#1A1919"
                android:backgroundTint="#595B6A"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"/>
            -->

            <EditText
                android:id="@+id/publicNameEditTextProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_public_name"
                android:inputType="text"
                android:textColor="#1A1919"
                android:backgroundTint="#595B6A"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"/>

            <!--
            <EditText
                android:id="@+id/passwordEditTextProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_password_optional"
                android:inputType="textPassword"
                android:textColor="#1A1919"
                android:backgroundTint="#595B6A"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"/>
            -->

            <EditText
                android:id="@+id/emailEditTextProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="#1A1919"
                android:backgroundTint="#595B6A"
                android:textSize="20sp"
                android:enabled="false" android:focusable="false"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/provinceEditTextProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_province"
                android:inputType="textCapWords"
                android:textColor="#1A1919"
                android:backgroundTint="#595B6A"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/cityEditTextProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                android:inputType="textCapWords"
                android:textColor="#1A1919"
                android:backgroundTint="#595B6A"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"/>

            <!--
            <EditText
                android:id="@+id/phoneEditTextProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_optional"
                android:inputType="phone"
                android:textColor="#1A1919"
                android:backgroundTint="#595B6A"
                android:textSize="20sp"
                android:layout_marginBottom="12dp"/>
            -->
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/actionButtonsLayoutEditProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/viewGamesButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_my_games"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/saveChangesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save_changes"
            android:backgroundTint="#00796B"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/editProfileLoadingProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

